Set notes to have zero height, so that they don't make table cells bigger. Will probably cause problems later

--- a/sass/notes.scss
+++ b/sass/notes.scss
@@ -6,6 +6,7 @@ span.note, div.note {
   clear: both;
   font-family: 'Source Serif Pro', serif;
   font-weight: 300;
+  height:0px;
 }
 
 div.note { margin-top: -5.3em; }
