Fix some font issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{{ get_url(path="math.css") }}" />
 <link rel="stylesheet" href="{{ get_url(path="tables.css") }}" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro+Semibold&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
