Add HiRISE post and OG card images

--- a/templates/page.html
+++ b/templates/page.html
@@ -6,5 +6,6 @@
 <meta name="twitter:title" content="{{page.title}} | {{config.title}}" />
 <meta name="twitter:card" content="summary" />
 <meta property="og:description" content="{{page.description}}" />
-
+<meta name="og:image" content="{{page.permalink}}card.png" />
+<meta name="twitter:image" content="{{page.permalink}}card.png" />
 {%- endblock title %}
