Add opponent post 1, plus some adjustments and fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,9 @@
 <link rel="stylesheet" href="{{ get_url(path="notes.css") }}" />
 <link rel="stylesheet" href="{{ get_url(path="math.css") }}" />
 <link rel="stylesheet" href="{{ get_url(path="tables.css") }}" />
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 <link href="{{ get_url(path="fontawesome/fontawesome.css") }}" rel="stylesheet">
 <link href="{{ get_url(path="fontawesome/brands.css") }}" rel="stylesheet">
 <link href="{{ get_url(path="fontawesome/solid.css") }}" rel="stylesheet">
