--- a/templates/shortcodes/aside.html
+++ b/templates/shortcodes/aside.html
@@ -1,11 +1,11 @@
-<sup class="sidenote-widget"><a href="#aside{{ nth }}" id="backside{{ nth }}">⁺
+<span class="sidenote-widget"><a href="#aside{{ nth }}" id="backside{{ nth }}">⁺
 </a>
-</sup>
+</span>
 <span class="note">
 <a id="aside{{ nth }}"></a>
-<sup class="sidenote-widget">
+<span class="sidenote-widget">
 ⁺
-</sup> {{ body }}
+</span> {{ body }}
 <a href="#backside{{ nth }}" class="sidenote-widget">
 ⏎
 </a>
