--- a/templates/index.html
+++ b/templates/index.html
@@ -21,4 +21,5 @@
 </p>
     <p style="text-align:center"><a href="https://twitter.com/MuireallPrase" rel="me">Twitter</a>
     ☙  <a href="mailto:muireall.prase@protonmail.com" rel="me">Email</a>  ❧ <a href="https://github.com/muireall" rel="me">GitHub</a></p>
+    <p style="text-align:center"> <a class="h-card" href=https://muireall.space">Muireall Prase</a> </p>
 {%- endblock footer %}
